bad/missing_return_after_if_false_else.example_compiler_output
ERROR
[1mbad/missing_return_after_if_false_else.lat:3:13: [1;35mwarning: [0;1mdead code[m
	if (false) return 0;
	           [1;32m^[m
[1mbad/missing_return_after_if_false_else.lat:3:6: [1;34mnote: [0;1mif condition always evaluates to false[m
	if (false) return 0;
	    [1;32m^[m
[1mbad/missing_return_after_if_false_else.lat:2:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
int main() {
[1;32m^[m
